--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "codegen": "rimraf src/codegen && apollo client:codegen src/codegen --target typescript --outputFlat && rm src/codegen/globalTypes.ts",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -8,21 +9,42 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.20",
+    "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "apollo-upload-client": "^16.0.0",
+    "apollo3-cache-persist": "^0.9.1",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-asset": "~8.3.1",
     "expo-blur": "~9.0.3",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "graphql": "^15.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-appearance": "~0.3.3",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/apollo-upload-client": "^14.1.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/styled-components-react-native": "^5.1.1",
+    "apollo": "^2.33.4",
+    "react-native-screens": "^3.3.0",
+    "rimraf": "^3.0.2",
+    "subscriptions-transport-ws": "^0.9.19",
     "typescript": "~4.0.0"
   },
   "private": true
