--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-appearance": "~0.3.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-web": "~0.13.12",
