--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@actbase/react-daum-postcode": "^0.9.3",
     "@apollo/client": "^3.3.20",
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "^3.0.3",
     "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "apollo-upload-client": "^16.0.0",
@@ -21,7 +24,10 @@
     "expo-app-loading": "^1.0.3",
     "expo-asset": "~8.3.1",
     "expo-blur": "~9.0.3",
+    "expo-camera": "~11.0.2",
     "expo-font": "~9.1.0",
+    "expo-location": "~12.0.4",
+    "expo-media-library": "~12.0.2",
     "expo-status-bar": "~1.0.4",
     "graphql": "^15.5.0",
     "react": "16.13.1",
@@ -29,11 +35,14 @@
     "react-hook-form": "^7.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-appearance": "~0.3.3",
+    "react-native-dotenv": "^2.6.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
+    "react-native-tab-view": "^2.16.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "11.2.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -41,6 +50,7 @@
     "@types/apollo-upload-client": "^14.1.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/styled-components-react-native": "^5.1.1",
     "apollo": "^2.33.4",
     "react-native-screens": "^3.3.0",
