--- a/app.json
+++ b/app.json
@@ -16,12 +16,21 @@
     "userInterfaceStyle": "automatic",
     "assetBundlePatterns": ["**/*"],
     "ios": {
+      "config": {
+        "googleMapsApiKey": "AIzaSyDawbVNIQzSZDM9WC_8fOltll-F5_vkSXo"
+      },
       "supportsTablet": true,
       "bundleIdentifier": "com.pleed0215.nomadcoffee",
-      "buildNumber": "1.0.0"
+      "buildNumber": "1.0.0"      
     },
+      
     "android": {
-      "package": "com.pleed0215.nomadcoffee",
+      "package": "com.pleed0215.nomadcoffee",      
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDawbVNIQzSZDM9WC_8fOltll-F5_vkSXo"
+        }
+      },
       "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
